--- a/index.html
+++ b/index.html
@@ -1996,6 +1996,7 @@ function enterShow() {
   renderTackRoom && renderTackRoom();
   renderShowDropdown();
   document.getElementById('showResults').innerHTML = resultsHTML;
+  renderRiders();
 }
 
 
