--- a/index.html
+++ b/index.html
@@ -1084,6 +1084,7 @@ function renameRider(index, newName) {
   gameState.riders[index].name = newName;
   renderRiders();
   renderStable();
+  saveGameState();
 }
 
 function assignRiderToHorse(riderIndex, horseIndex) {
