--- a/index.html
+++ b/index.html
@@ -1024,7 +1024,7 @@ function renderStable() {
       html += 'Rider: None<br>';
     }
 
-    card.innerHTML = html;
+    html += '<button onclick="deleteHorse(' + index + ')">Delete Horse</button><br>';card.innerHTML = html;
     stableGrid.appendChild(card);
   });
 }
@@ -2118,6 +2118,16 @@ document.body.addEventListener("click", function (e) {
   }
 });
 
+
+function deleteHorse(index) {
+  if (!confirm("Are you sure you want to delete this horse?")) return;
+  gameState.horses.splice(index, 1);
+  renderStable();
+  renderRiders();
+  renderTackRoom();
+  renderShowDropdown();
+  renderBreedingDropdowns();
+}
 </script>
 <div class="content" id="settings" style="display:none;">
 <h2>Settings</h2>
