--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@ select {
 <div class="tab" data-tab="breeding">Breeding</div>
 <div class="tab" data-tab="workshop">Workshop</div>
 <div class="tab" data-tab="tackRoom">Tack Room</div>
-<div class="tab" data-tab="shows">Shows</div><div class="tab" data-tab="marketplace">Marketplace</div>
+<div class="tab" data-tab="shows">Shows</div>
 <div class="tab" data-tab="settings">Settings</div>
 </div>
 <div class="content active" id="salesYard">
@@ -840,6 +840,14 @@ select {
 <button onclick="enterShow()">Enter Show</button>
 </div>
 <div id="showResults" style="margin-top: 20px;"></div>
+</div>
+<div class="content" id="settings" style="display:none;">
+<h2>Settings</h2>
+<button id="resetGameButton">Reset Game</button>
+<br/><br/>
+<button id="saveGameButton">Save Game</button>
+<input accept=".json" id="loadGameInput" style="display:none;" type="file"/>
+<button id="loadGameButton">Load Game</button>
 </div>
 <script>
     const tabs = document.querySelectorAll('.tab');
@@ -949,7 +957,7 @@ function initializeGame() {
   if (!gameState.sales || gameState.sales.length < 4) {
     gameState.sales = gameState.sales || [];
     while (gameState.sales.length < 4) {
-      gameState.sales.push(generateHorse());
+      gameState.sales.push(generateSaleHorse());
     }
   }
   document.getElementById("coinCount").textContent = gameState.coins;
@@ -982,6 +990,18 @@ function initializeGame() {
             if (horse.age.months >= 12) {
               horse.age.months = 0;
               horse.age.years++;
+            }
+            if (horse.isPregnant) {
+              horse.pregnancyMonths = (horse.pregnancyMonths || 0) + 1;
+              if (horse.pregnancyMonths >= 11) {
+                const stallion = gameState.horses[horse.lastBredTo] || gameState.horses.find(h => h.gender === "Stallion");
+                const foal = generateFoal(horse, stallion);
+                foal.sireId = gameState.horses.indexOf(stallion);
+                foal.damId = gameState.horses.indexOf(horse);
+                gameState.horses.push(foal);
+                horse.isPregnant = false;
+                horse.pregnancyMonths = 0;
+              }
             }
           });
         }
@@ -1024,14 +1044,13 @@ function renderStable() {
       html += 'Rider: None<br>';
     }
 
-    html += '<button onclick="deleteHorse(' + index + ')">Delete Horse</button><br>';card.innerHTML = html;
+    card.innerHTML = html;
     stableGrid.appendChild(card);
   });
 }
 
     function renameHorse(index, newName) {
   gameState.horses[index].name = newName;
-  saveGameState();
   renderStable();
   renderRiders();
 }
@@ -1084,7 +1103,6 @@ function renderRiders() {
 
 function renameRider(index, newName) {
   gameState.riders[index].name = newName;
-  saveGameState();
   renderRiders();
   renderStable();
 }
@@ -1100,7 +1118,6 @@ function assignRiderToHorse(riderIndex, horseIndex) {
     gameState.horses[parseInt(horseIndex)].assignedRiderId = riderIndex;
   }
 
-  saveGameState();
   renderRiders();
   renderStable();
 }
@@ -1568,7 +1585,7 @@ function enterShow() {
   if (placement === 1) {
     horse.showStreak.firsts++;
     horse.showStreak.lasts = 0;
-    if (horse.showStreak.firsts >= 10) {
+    if (horse.showStreak.firsts >= 3) {
       horse.difficulty = (horse.difficulty || 0) + 1;
       horse.showStreak.firsts = 0;
     }
@@ -1697,7 +1714,7 @@ function enterShow() {
   if (placement === 1) {
     horse.showStreak.firsts++;
     horse.showStreak.lasts = 0;
-    if (horse.showStreak.firsts >= 10) {
+    if (horse.showStreak.firsts >= 3) {
       horse.difficulty = (horse.difficulty || 0) + 1;
       horse.showStreak.firsts = 0;
     }
@@ -1960,7 +1977,7 @@ function enterShow() {
   if (placement === 1) {
     horse.showStreak.firsts++;
     horse.showStreak.lasts = 0;
-    if (horse.showStreak.firsts >= 10) {
+    if (horse.showStreak.firsts >= 3) {
       horse.difficulty = (horse.difficulty || 0) + 1;
       horse.showStreak.firsts = 0;
     }
@@ -2121,165 +2138,7 @@ document.body.addEventListener("click", function (e) {
   }
 });
 
-
-function deleteHorse(index) {
-  if (!confirm("Are you sure you want to delete this horse?")) return;
-  gameState.horses.splice(index, 1);
-  renderStable();
-  renderRiders();
-  renderTackRoom();
-  renderShowDropdown();
-  renderBreedingDropdowns();
-}
 </script>
-<div class="content" id="marketplace">
-<h2>Marketplace</h2>
-<div>
-<label for="marketHorseSelect">Select Horse:</label>
-<select id="marketHorseSelect"></select>
-<button onclick="buyHorseStat()">Buy Random Horse Stat (5,000,000 coins)</button>
-</div>
-<br/>
-<div>
-<label for="marketRiderSelect">Select Rider:</label>
-<select id="marketRiderSelect"></select>
-<button onclick="buyRiderStat()">Buy Random Rider Stat (10,000,000 coins)</button>
-</div>
-</div><div class="content" id="settings" style="display:none;">
-<h2>Settings</h2>
-<button id="resetGameButton">Reset Game</button>
-<br/><br/>
-<button id="saveGameButton">Save Game</button>
-<input accept=".json" id="loadGameInput" style="display:none;" type="file"/>
-<button id="loadGameButton">Load Game</button>
-</div>
-<script>
-function renderMarketplaceDropdowns() {
-  const horseSelect = document.getElementById("marketHorseSelect");
-  const riderSelect = document.getElementById("marketRiderSelect");
-  if (!horseSelect || !riderSelect) return;
 
-  horseSelect.innerHTML = "";
-  gameState.horses.forEach((horse, index) => {
-    const option = document.createElement("option");
-    option.value = index;
-    option.textContent = horse.name || "Unnamed horse";
-    horseSelect.appendChild(option);
-  });
-
-  riderSelect.innerHTML = "";
-  gameState.riders.forEach((rider, index) => {
-    const option = document.createElement("option");
-    option.value = index;
-    option.textContent = rider.name || "Unnamed rider";
-    riderSelect.appendChild(option);
-  });
-}
-
-function buyHorseStat() {
-  const select = document.getElementById("marketHorseSelect");
-  const index = parseInt(select.value);
-  const horse = gameState.horses[index];
-  if (!horse || gameState.coins < 5000000) {
-    alert("Insufficient coins or invalid horse.");
-    return;
-  }
-  gameState.coins -= 5000000;
-  saveGameState();
-  const stat = ["jumping", "endurance", "speed", "obedience"][Math.floor(Math.random() * 4)];
-  horse[stat]++;
-  document.getElementById("coinCount").textContent = gameState.coins;
-  renderStable();
-  alert(horse.name + " gained +1 " + stat + "!");
-}
-
-function buyRiderStat() {
-  const select = document.getElementById("marketRiderSelect");
-  const index = parseInt(select.value);
-  const rider = gameState.riders[index];
-  if (!rider || gameState.coins < 10000000) {
-    alert("Insufficient coins or invalid rider.");
-    return;
-  }
-  gameState.coins -= 10000000;
-  saveGameState();
-  const stat = ["balance", "control", "technique", "empathy"][Math.floor(Math.random() * 4)];
-  rider[stat]++;
-  document.getElementById("coinCount").textContent = gameState.coins;
-  renderRiders();
-  alert(rider.name + " gained +1 " + stat + "!");
-}
-
-function updateMarketplace() {
-  renderMarketplaceDropdowns();
-}
-
-document.addEventListener("DOMContentLoaded", () => {
-  updateMarketplace();
-});
-</script><script>
-document.addEventListener("DOMContentLoaded", function () {
-  const saveBtn = document.getElementById('saveGameButton');
-  const loadBtn = document.getElementById('loadGameButton');
-  const loadInput = document.getElementById('loadGameInput');
-  const resetBtn = document.getElementById('resetGameButton');
-
-  if (saveBtn) {
-    saveBtn.addEventListener('click', function () {
-      const dataStr = JSON.stringify(gameState, null, 2);
-      const blob = new Blob([dataStr], { type: "application/json" });
-      const url = URL.createObjectURL(blob);
-
-      const a = document.createElement('a');
-      a.href = url;
-      a.download = "virtual_ranch_save.json";
-      a.click();
-
-      URL.revokeObjectURL(url);
-    });
-  }
-
-  if (loadBtn && loadInput) {
-    loadBtn.addEventListener('click', () => loadInput.click());
-
-    loadInput.addEventListener('change', function (event) {
-      const file = event.target.files[0];
-      if (!file) return;
-
-      const reader = new FileReader();
-      reader.onload = function (e) {
-        try {
-          const data = JSON.parse(e.target.result);
-          gameState = data;
-          alert("Game loaded successfully.");
-          location.reload();
-        } catch (err) {
-          alert("Failed to load save file.");
-        }
-      };
-      reader.readAsText(file);
-    });
-  }
-
-  if (resetBtn) {
-    resetBtn.addEventListener('click', function () {
-      if (!confirm("Are you sure you want to reset the game? This cannot be undone.")) return;
-      gameState.coins = 1000;
-      gameState.horses = [];
-      gameState.sales = [];
-      gameState.riders = [];
-      gameState.date = { year: 0, month: 0, lastUpdate: Date.now() };
-      gameState.tack = [];
-      gameState.tackSkills = {
-        bridle: { durability: 1, prestige: 0, progress: 0 },
-        saddle: { durability: 1, prestige: 0, progress: 0 },
-        horseBoots: { durability: 1, prestige: 0, progress: 0 },
-        horseShoes: { durability: 1, prestige: 0, progress: 0 }
-      };
-      alert("Game has been reset.");
-      location.reload();
-    });
-  }
-});
-</script></body>
+</body>
 </html>
