--- a/index.html
+++ b/index.html
@@ -857,6 +857,15 @@ select {
 <h3>Import Rider</h3>
 <input accept=".json" id="importRiderFile" onchange="importRiders(event)" style="display:none;" type="file"/>
 <button onclick="document.getElementById('importRiderFile').click()">Upload Rider (.json)</button>
+
+<hr/>
+<h2>Save, Load, and Reset</h2>
+<button onclick="saveGameToFile()">Save Game</button>
+<input type="file" id="loadGameFile" accept=".json" onchange="loadGameFromFile(event)" style="display:none;"/>
+<button onclick="document.getElementById('loadGameFile').click()">Load Game</button>
+<br/><br/>
+<button onclick="resetGame()">Reset Game</button>
+
 </div>
 <script>
 function renderTrainingDropdowns() {
@@ -916,6 +925,62 @@ function trainSelectedRider() {
   renderRiders();
   document.getElementById('riderTrainResult').innerText = `${rider.name} gained +1 ${randomStat}!`;
 }
+
+function saveGameToFile() {
+  const dataStr = JSON.stringify(gameState, null, 2);
+  const blob = new Blob([dataStr], { type: "application/json" });
+  const url = URL.createObjectURL(blob);
+  const a = document.createElement('a');
+  a.href = url;
+  a.download = 'virtual_ranch_save.json';
+  document.body.appendChild(a);
+  a.click();
+  document.body.removeChild(a);
+}
+
+function loadGameFromFile(event) {
+  const file = event.target.files[0];
+  if (!file) return;
+  
+  const reader = new FileReader();
+  reader.onload = function(e) {
+    try {
+      const data = JSON.parse(e.target.result);
+      if (data && typeof data === "object") {
+        gameState = structuredClone(data);
+        localStorage.setItem("virtualRanchSave", JSON.stringify(gameState));
+        initializeGame();
+      } else {
+        alert("Invalid save file.");
+      }
+    } catch (err) {
+      alert("Failed to load save file.");
+    }
+  };
+  reader.readAsText(file);
+}
+
+function resetGame() {
+  if (!confirm("Are you sure you want to reset your game? This cannot be undone!")) return;
+
+  localStorage.removeItem("virtualRanchSave");
+
+  gameState = {
+    coins: 1000,
+    horses: [],
+    sales: [],
+    riders: [],
+    date: {
+      year: 0,
+      month: 0,
+      lastUpdate: Date.now()
+    }
+  };
+
+  saveGameState();
+  location.reload();
+}
+
 </script><script>
     const tabs = document.querySelectorAll('.tab');
     const contents = document.querySelectorAll('.content');
@@ -2227,6 +2292,62 @@ document.body.addEventListener("click", function (e) {
   }
 });
 
+
+function saveGameToFile() {
+  const dataStr = JSON.stringify(gameState, null, 2);
+  const blob = new Blob([dataStr], { type: "application/json" });
+  const url = URL.createObjectURL(blob);
+  const a = document.createElement('a');
+  a.href = url;
+  a.download = 'virtual_ranch_save.json';
+  document.body.appendChild(a);
+  a.click();
+  document.body.removeChild(a);
+}
+
+function loadGameFromFile(event) {
+  const file = event.target.files[0];
+  if (!file) return;
+  
+  const reader = new FileReader();
+  reader.onload = function(e) {
+    try {
+      const data = JSON.parse(e.target.result);
+      if (data && typeof data === "object") {
+        gameState = structuredClone(data);
+        localStorage.setItem("virtualRanchSave", JSON.stringify(gameState));
+        initializeGame();
+      } else {
+        alert("Invalid save file.");
+      }
+    } catch (err) {
+      alert("Failed to load save file.");
+    }
+  };
+  reader.readAsText(file);
+}
+
+function resetGame() {
+  if (!confirm("Are you sure you want to reset your game? This cannot be undone!")) return;
+
+  localStorage.removeItem("virtualRanchSave");
+
+  gameState = {
+    coins: 1000,
+    horses: [],
+    sales: [],
+    riders: [],
+    date: {
+      year: 0,
+      month: 0,
+      lastUpdate: Date.now()
+    }
+  };
+
+  saveGameState();
+  location.reload();
+}
+
 </script>
 <div class="content" id="trainingCenter" style="display:none;">
 <h2>Training Center</h2>
@@ -2340,6 +2461,62 @@ function renderExportDropdowns() {
     riderSelect.appendChild(option);
   });
 }
+
+function saveGameToFile() {
+  const dataStr = JSON.stringify(gameState, null, 2);
+  const blob = new Blob([dataStr], { type: "application/json" });
+  const url = URL.createObjectURL(blob);
+  const a = document.createElement('a');
+  a.href = url;
+  a.download = 'virtual_ranch_save.json';
+  document.body.appendChild(a);
+  a.click();
+  document.body.removeChild(a);
+}
+
+function loadGameFromFile(event) {
+  const file = event.target.files[0];
+  if (!file) return;
+  
+  const reader = new FileReader();
+  reader.onload = function(e) {
+    try {
+      const data = JSON.parse(e.target.result);
+      if (data && typeof data === "object") {
+        gameState = structuredClone(data);
+        localStorage.setItem("virtualRanchSave", JSON.stringify(gameState));
+        initializeGame();
+      } else {
+        alert("Invalid save file.");
+      }
+    } catch (err) {
+      alert("Failed to load save file.");
+    }
+  };
+  reader.readAsText(file);
+}
+
+function resetGame() {
+  if (!confirm("Are you sure you want to reset your game? This cannot be undone!")) return;
+
+  localStorage.removeItem("virtualRanchSave");
+
+  gameState = {
+    coins: 1000,
+    horses: [],
+    sales: [],
+    riders: [],
+    date: {
+      year: 0,
+      month: 0,
+      lastUpdate: Date.now()
+    }
+  };
+
+  saveGameState();
+  location.reload();
+}
+
 </script><script>
 function deleteHorse(index) {
   if (!confirm('Are you sure you want to delete this horse?')) return;
@@ -2358,5 +2535,61 @@ function deleteRider(index) {
   renderTrainingDropdowns();
   renderExportDropdowns();
 }
+
+function saveGameToFile() {
+  const dataStr = JSON.stringify(gameState, null, 2);
+  const blob = new Blob([dataStr], { type: "application/json" });
+  const url = URL.createObjectURL(blob);
+  const a = document.createElement('a');
+  a.href = url;
+  a.download = 'virtual_ranch_save.json';
+  document.body.appendChild(a);
+  a.click();
+  document.body.removeChild(a);
+}
+
+function loadGameFromFile(event) {
+  const file = event.target.files[0];
+  if (!file) return;
+  
+  const reader = new FileReader();
+  reader.onload = function(e) {
+    try {
+      const data = JSON.parse(e.target.result);
+      if (data && typeof data === "object") {
+        gameState = structuredClone(data);
+        localStorage.setItem("virtualRanchSave", JSON.stringify(gameState));
+        initializeGame();
+      } else {
+        alert("Invalid save file.");
+      }
+    } catch (err) {
+      alert("Failed to load save file.");
+    }
+  };
+  reader.readAsText(file);
+}
+
+function resetGame() {
+  if (!confirm("Are you sure you want to reset your game? This cannot be undone!")) return;
+
+  localStorage.removeItem("virtualRanchSave");
+
+  gameState = {
+    coins: 1000,
+    horses: [],
+    sales: [],
+    riders: [],
+    date: {
+      year: 0,
+      month: 0,
+      lastUpdate: Date.now()
+    }
+  };
+
+  saveGameState();
+  location.reload();
+}
+
 </script></body>
 </html>
